--- a/Dotnet8ModuleSubmodule/appsettings.json
+++ b/Dotnet8ModuleSubmodule/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DBConnection": "Server=10.1.2.210; Database=mydb1dotnet8; User Id=sqluser1; Password=sqluser1; Trusted_Connection=False; TrustServerCertificate=True"
   },
+
+  "Jwt": {
+    "Token": "MYSECREATCODEMYSECREATCODEMYSECREATCODEMYSECREATCODE"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
